<?xml version="1.0"?>
<package format="2">
  <name>pose_graph_tools</name>
  <version>1.0.0</version>
  <description>Type definitions for working with pose graphs.</description>

  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>
  <maintainer email="lschmid@mit.edu">Lukas Schmid</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
</package>
