cmake_minimum_required(VERSION 3.16)
project(pose_graph_tools_msgs)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(ament_cmake REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(std_msgs REQUIRED)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra)
endif()

rosidl_generate_interfaces(
  ${PROJECT_NAME}
  msg/BowQueries.msg
  msg/BowQuery.msg
  msg/BowRequests.msg
  msg/BowVector.msg
  msg/LoopClosures.msg
  msg/LoopClosuresAck.msg
  msg/PoseGraph.msg
  msg/PoseGraphEdge.msg
  msg/PoseGraphNode.msg
  msg/TimeRangeQuery.msg
  msg/VLCFrameMsg.msg
  msg/VLCFrames.msg
  msg/VLCRequests.msg
  srv/LcdFrameRegistration.srv
  srv/PoseGraphQuery.srv
  srv/VLCFrameQuery.srv
  DEPENDENCIES
  builtin_interfaces
  geometry_msgs
  sensor_msgs
  std_msgs)

ament_package()
