<?xml version="1.0"?>
<package format="2">
  <name>pose_graph_tools_msgs</name>
  <version>1.0.0</version>
  <description>ROS message and service definitions of pose_graph_tools.</description>

  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>
  <maintainer email="lschmid@mit.edu">Lukas Schmid</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
